# CS_StudyNotes

./: .gitignore  Obsidian-README.md  README.md  TODO.md  TODO_LIST.md  研究计划表.md
.foam/templates/: new-note.md
.obsidian/: core-plugins.json
00_归档内容/博客/: MongoDB 使用笔记.md
00_待整理/文章/: AI_Agent_上下文系统_Context_Engineering_指南.md  Claude_官方开源Skill_一键安装_50+_神技能.md  Hermes Agent 四层记忆系统深度解析.md  LLM_Wiki.md  OpenClaw_MCP_完全指南.md  OpenClaw_WhatsApp接入完整指南.md  OpenClaw_微信接入指南.md  OpenClaw_接入飞书.md  RAG原理流程实战与生态_2026最新版.md  RAG是什么_阿里云开发者社区.md  openclaw常用命令.md  opencode-memory-mechanism.md  scoop 管理器的使用.md  sisyphus-memory-mechanism.md  tencent_article.md  【文献】Fish 配置方法.md  从代码到知识_Andrej_Karpathy_LLM_知识库方法论.md  关于ping命令的返回信息.md  深入解析_OpenClaw_Skills_扩展系统.md
00_待整理笔记/tmp/: tmp.md
00_待整理笔记/文章/: Bash 使用笔记.md  Latex编译器推荐.md  scoop管理器的使用.md  tmp,txt  zsh 使用笔记.md  zsh 配置笔记.md
00_待整理笔记/文章/zsh/: Zsh 使用笔记.md
01_个人使用方法/LLM 知识库方法论/: Andrej Karpathy 的 LLM 知识库方法论.md
01_个人使用方法/互联网交流方法/: 怎样进行有意义的线上讨论.md
01_个人使用方法/卡片盒笔记法/: 【翻译】关于卡片盒笔记法的介绍.md  【翻译】学习如何阅读.md  关于卡片盒笔记法的实践.md  尼克拉斯·卢曼简介.md
03_编程技术学习/计算机语言/01.编程语言/Python/01.学习笔记/examples/python_demo/: pyproject.toml
03_编程技术学习/计算机语言/01.编程语言/Python/01.学习笔记/examples/python_demo/src/python_demo/: main.py
04_应用软件使用/03.操作系统/: Ubuntu 使用笔记.md
04_软件使用经验/03.网页端工具/: Shields.io 使用笔记.md
04_软件使用经验/AI-Agent/: Agent 的基础应用.md  Agent 的应用演示.md  Agent 的记忆机制.md  关于 OpenClaw.md  补充 Hermes Agent.md  补充 OpenClaw.md
04_软件使用经验/Clang/: Clang 使用笔记.md
04_软件使用经验/Git/: Git 使用笔记.md
04_软件使用经验/Shell/: Fish 配置笔记.md
04_软件使用经验/Shields.io/: Shields.io 使用笔记.md
(+299 files in other folders)
